--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,24 @@
 .headshot {
   height: 400px;
 }
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+@keyframes fadein {
+  from {
+    opacity: 0;
   }
+  to {
+    opacity: 1;
+  }
+}
+
+.MyName {
+  animation-duration: 3s;
+  animation-name: fadein;
+  animation-iteration-count: 1;
+}
+
+.MyName {
+  margin: 70px;
 }
 
 .Welcome {
