--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,11 @@
   font-family: "DomaineDisplayNarrow", Georgia, serif;
   font-weight: bold;
   font-style: normal;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-color: lavender;
 }
 
 .headshot {
-  height: 400px;
+  height: 300px;
 }
 
 @keyframes fadein {
@@ -24,7 +20,7 @@
 }
 
 .MyName {
-  animation-duration: 3s;
+  animation-duration: 5s;
   animation-name: fadein;
   animation-iteration-count: 1;
 }
@@ -34,9 +30,15 @@
 }
 
 .Welcome {
-  margin: 70px;
+  margin: 100px;
 }
 
-.ExperienceDetails {
-  margin: 10px;
+.Experience {
+  margin: 100px;
+  padding: 100px;
+}
+
+.Intro {
+  margin: 100px;
+  padding: 50px;
 }
