--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html,
 body {
   margin: 0;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: lavender;
+  overflow: hidden;
 }
 
 code {
